fix(UI): dark mode and navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,9 +9,10 @@
 }
 
 .dark {
-  --background: #0a0a0a;
-  --foreground: #ededed;
+  --background: #171717;
+  --foreground: #ffffff;
 }
+
 
 @theme inline {
   --color-background: var(--background);
@@ -22,8 +23,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #171717;
+    --foreground: #ffffff;
   }
 }
 
